--- a/da-editor/manifest.json
+++ b/da-editor/manifest.json
@@ -1,6 +1,6 @@
 { 
     "name": "da-editor",
-    "version": "1.0",
+    "version": "2.0",
     "description": "edit any webpage anytime",
     "manifest_version": 2,
 
@@ -21,7 +21,8 @@
 
     "permissions":[
      "tabs",
-     "storage"
+     "storage",
+     "activeTab"
     ],
 
     "content_scripts": 
